# psqlpy-sqlalchemy

./: .gitignore  .pre-commit-config.yaml  Makefile  OPTIMIZATION_CHANGES.md  README.md  docker-compose.yml  performance_comparison.py  pyproject.toml
.github/workflows/: ci.yml  codeql-analysis.yml
psqlpy_sqlalchemy/: __init__.py  connection.py  dbapi.py  dialect.py
tests/: __init__.py  test_advanced_features.py  test_connection.py  test_connection_edge_cases.py  test_custom_fastapi_middleware.py  test_dbapi.py  test_dialect.py  test_poolclass_compatibility.py  test_sqlmodel_compatibility.py  test_uuid_support.py
