[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "psqlpy-sqlalchemy"
version = "0.1.0"
description = "SQLAlchemy dialect for psqlpy PostgreSQL driver"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "psqlpy-sqlalchemy contributors"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["postgresql", "psqlpy", "sqlalchemy", "database", "async"]
requires-python = ">=3.8"
dependencies = [
    "sqlalchemy>=2.0.0",
    "psqlpy>=0.11.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=22.0.0",
    "isort>=5.0.0",
    "mypy>=1.0.0",
    "flake8>=6.0.0",
]

[project.urls]
Homepage = "https://github.com/your-username/psqlpy-sqlalchemy"
Repository = "https://github.com/your-username/psqlpy-sqlalchemy"
Issues = "https://github.com/your-username/psqlpy-sqlalchemy/issues"

[project.entry-points."sqlalchemy.dialects"]
"postgresql.psqlpy" = "psqlpy_sqlalchemy.dialect:PsqlpyDialect"

[tool.setuptools.packages.find]
where = ["."]
include = ["psqlpy_sqlalchemy*"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.9"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
disallow_any_generics = false
disallow_untyped_calls = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = false
warn_redundant_casts = true
warn_unused_ignores = false
warn_no_return = true
warn_unreachable = false
strict_equality = false
show_error_codes = true
show_column_numbers = true

# Per-module options
[[tool.mypy.overrides]]
module = "psqlpy.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "psqlpy_sqlalchemy.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true
